# cmatrix

./: .gitignore  CMakeLists.txt
include/cmatrix/: core.h
src/: core.c
tests/: main.c
